--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "~9.0.7",
     "@angular/router": "~9.0.7",
     "angular-svg-icon": "^9.1.0",
+    "bulma": "^0.8.1",
     "prettier": "^2.0.2",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
