--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "~9.0.7",
     "angular-svg-icon": "^9.1.0",
     "bulma": "^0.8.1",
+    "jwt-decode": "^2.2.0",
     "prettier": "^2.0.2",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
