--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -31,11 +31,13 @@ jobs:
       run: |
         npm i
         npm run build
-    
+    - name: package the release (tar.gz)
+      run: |
+        tar -zcvf dist/teamloan-frontend-develop.tar.gz dist/teamloan-frontend
     - name: Push Build to Releases
       uses: ncipollo/release-action@v1
       with:
-        artifacts: "dist/teamloan-frontend"
+        artifact: "dist/teamloan-frontend-develop.tar.gz"
         commit: develop
         tag: develop
         replacesArtifacts: true
