--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -45,3 +45,12 @@ jobs:
         replacesArtifacts: true
         allowUpdates: true
         token: ${{ secrets.TOKEN }}
+  deploy:
+  - name: FTP Deploy
+    uses: SamKirkland/FTP-Deploy-Action@3.1.1
+    with:
+      ftp-server: ftp.teamloan.pt
+      ftp-username: frontend-dev@frontend.teamloan.pt
+      ftp-password: {{ secrets.FTP_DEV_PASSWORD }}
+      local-dir: dist/teamloan-frontend
+      git-ftp-args: --all
