--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -11,47 +11,46 @@ jobs:
       matrix:
         node-version: [12.x]
     steps:
-    - name: Checkout
-      uses: actions/checkout@v2
+      - name: Checkout
+        uses: actions/checkout@v2
 
-    - name: Cache node modules
-      uses: actions/cache@v1
-      with:
-        path: ~/.npm
-        key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
-        restore-keys: |
-            ${{ runner.os }}-node-
+      - name: Cache node modules
+        uses: actions/cache@v1
+        with:
+          path: ~/.npm
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+              ${{ runner.os }}-node-
 
-    - name: Node ${{ matrix.node-version }}
-      uses: actions/setup-node@v1
-      with:
-        node-version: ${{ matrix.node-version }}
+      - name: Node ${{ matrix.node-version }}
+        uses: actions/setup-node@v1
+        with:
+          node-version: ${{ matrix.node-version }}
 
-    - name: npm install and npm run build
-      run: |
-        npm i
-        npm run build
-        
-    - name: package the release (tar.gz)
-      run: |
-        tar -zcvf dist/teamloan-frontend-develop.tar.gz dist/teamloan-frontend
-        
-    - name: Push Build to Releases
-      uses: ncipollo/release-action@v1
-      with:
-        artifacts: "dist/teamloan-frontend-develop.tar.gz"
-        commit: develop
-        tag: develop
-        replacesArtifacts: true
-        allowUpdates: true
-        token: ${{ secrets.TOKEN }}
-        
+      - name: npm install and npm run build
+        run: |
+          npm i
+          npm run build
+
+      - name: package the release (tar.gz)
+        run: |
+          tar -zcvf dist/teamloan-frontend-develop.tar.gz dist/teamloan-frontend
+
+      - name: Push Build to Releases
+        uses: ncipollo/release-action@v1
+        with:
+          artifacts: "dist/teamloan-frontend-develop.tar.gz"
+          commit: develop
+          tag: develop
+          replacesArtifacts: true
+          allowUpdates: true
+          token: ${{ secrets.TOKEN }}
   deploy:
-  - name: FTP Deploy
-    uses: SamKirkland/FTP-Deploy-Action@3.1.1
-    with:
-      ftp-server: ftp.teamloan.pt
-      ftp-username: frontend-dev@frontend.teamloan.pt
-      ftp-password: {{ secrets.FTP_DEV_PASSWORD }}
-      local-dir: dist/teamloan-frontend
-      git-ftp-args: --all
+    - name: FTP Deploy
+      uses: SamKirkland/FTP-Deploy-Action@3.1.1
+      with:
+        ftp-server: ftp.teamloan.pt
+        ftp-username: frontend-dev@frontend.teamloan.pt
+        ftp-password: ${{ secrets.FTP_DEV_PASSWORD }}
+        local-dir: dist/teamloan-frontend
+        git-ftp-args: --all
