--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -5,7 +5,7 @@ on:
     branches: [ develop ]
 
 jobs:
-  build:
+  build-and-deploy:
     runs-on: [ubuntu-18.04]
     strategy:
       matrix:
@@ -45,12 +45,13 @@ jobs:
           replacesArtifacts: true
           allowUpdates: true
           token: ${{ secrets.TOKEN }}
-  deploy:
-    - name: FTP Deploy
-      uses: SamKirkland/FTP-Deploy-Action@3.1.1
-      with:
-        ftp-server: ftp.teamloan.pt
-        ftp-username: frontend-dev@frontend.teamloan.pt
-        ftp-password: ${{ secrets.FTP_DEV_PASSWORD }}
-        local-dir: dist/teamloan-frontend
-        git-ftp-args: --all
+
+      - name: FTP Deploy
+        uses: SamKirkland/FTP-Deploy-Action@3.1.1
+        with:
+          ftp-server: ftp.teamloan.pt
+          ftp-username: frontend-dev@frontend.teamloan.pt
+          ftp-password: ${{ secrets.FTP_DEV_PASSWORD }}
+          local-dir: dist/teamloan-frontend
+          git-ftp-args: --all
+
