--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -45,6 +45,10 @@ jobs:
           replacesArtifacts: true
           allowUpdates: true
           token: ${{ secrets.TOKEN }}
+      
+      - name: Git status
+        run: |
+          git status
 
       - name: FTP Deploy
         uses: SamKirkland/FTP-Deploy-Action@3.1.1
