--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -48,7 +48,8 @@ jobs:
       
       - name: Git status
         run: |
-          git status
+          git restore package-lock.json
+          git restore package.json
 
       - name: FTP Deploy
         uses: SamKirkland/FTP-Deploy-Action@3.1.1
